--- a/index.html
+++ b/index.html
@@ -460,6 +460,9 @@
                         <h3>Doctor of Philosophy (PhD)</h3>
                         <p class="degree">Pharmacoinformatics</p>
                         <p class="institution">National Institute of Pharmaceutical Education and Research (NIPER), Mohali</p>
+                        <p style="color: var(--text-muted); font-size: 0.85rem; margin-top: 0.3rem;">
+                            <strong>Guide:</strong> Prof. Prabha Garg, Professor
+                        </p>
                         <div class="timeline-meta">
                             <span class="score">CGPA: 8.5/10</span>
                             <span class="year">2023 - 2026 (Pursuing)</span>
@@ -490,7 +493,7 @@
                         <p class="institution">Sunder Deep College of Pharmacy, Ghaziabad<br>Dr. APJ Abdul Kalam Technical University, Lucknow</p>
                         <div class="timeline-meta">
                             <span class="score">CGPA: 8.6/10</span>
-                            <span class="year">2017 - 2021</span>
+                            <span class="year">2016 - 2020</span>
                         </div>
                     </div>
                 </div>
