--- a/index.html
+++ b/index.html
@@ -412,10 +412,11 @@
                         </div>
                     </div>
                     <div class="hero-actions">
-                        <button class="btn btn-primary" onclick="downloadCV()">
+                        <!-- ✅ CHANGED: Now links directly to CV.pdf on GitHub -->
+                        <a href="https://raw.githubusercontent.com/pip700/dhairiya/main/CV.pdf" class="btn btn-primary" download="Dhairiya_Agarwal_CV.pdf">
                             <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/><path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/></svg>
                             Download CV
-                        </button>
+                        </a>
                         <a href="#publications" class="btn btn-secondary">
                             <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/><path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/></svg>
                             View Publications
@@ -1079,92 +1080,6 @@
                 });
             });
         });
-
-        function downloadCV() {
-            const cvContent = `CURRICULUM VITAE
-═══════════════════════════════════════════════════════
-
-DHAIRIYA AGARWAL
-PhD Candidate in Pharmacoinformatics
-
-═══════════════════════════════════════════════════════
-
-CONTACT INFORMATION
-───────────────────────────────────────────────────────
-Email: dhairiyaa@gmail.com
-Phone: +91-9015064028
-LinkedIn: linkedin.com/in/dhairiya-agarwal-6a1148184/
-GitHub: github.com/pip700
-
-Address: 06, Rajeev Puram Dasna, Near Devi Mandir Road
-         Ghaziabad, Uttar Pradesh – 201015, India
-
-═══════════════════════════════════════════════════════
-
-EDUCATION
-───────────────────────────────────────────────────────
-PhD (Pharmacoinformatics) | 2023-2026 (Pursuing)
-National Institute of Pharmaceutical Education & Research, Mohali
-CGPA: 8.5/10
-
-M.S. (Pharm.) Medicinal Chemistry | 2021-2023
-National Institute of Pharmaceutical Education & Research, Raebareli
-CGPA: 8.0/10
-Thesis: Design, Synthesis and In Silico Studies of Coumarin 
-        Derivatives as Multi-targeted Anti-Alzheimer's Agents
-Advisor: Dr. Gopal Lal Khatik
-
-B.Pharm | 2017-2021
-Sunder Deep College of Pharmacy, Ghaziabad
-Dr. APJ Abdul Kalam Technical University, Lucknow
-CGPA: 8.6/10
-
-═══════════════════════════════════════════════════════
-
-COMPETITIVE EXAMINATIONS QUALIFIED
-───────────────────────────────────────────────────────
-• NIPER-PhD (2023)
-• NIPER-JEE (2021)
-• GPAT (2021)
-
-═══════════════════════════════════════════════════════
-
-PUBLICATIONS (6)
-───────────────────────────────────────────────────────
-1. Shah, A. J., et al. (2025). Biotechnology Reports.
-2. Agarwal, D., et al. (2024). J. Biomol. Struct. Dyn.
-3. Mahajan, A., et al. (2024). ChemistrySelect.
-4. Agarwal, D., et al. (2024). CNS Agents Med. Chem.
-5. Ambatwar, R., et al. (2024). J. Heterocyclic Chem.
-
-PATENT (1)
-Indian Patent No. 554,344 (2024)
-
-═══════════════════════════════════════════════════════
-
-GITHUB PROJECTS
-───────────────────────────────────────────────────────
-1. cardiotox_prediction - ML cardiotoxicity prediction
-2. Gromacs_docker_setup - Dockerized GROMACS for MD
-3. Repurposing - 3D-VAE molecular repurposing
-4. Pks13_Pred - Pks13 inhibitor classification
-5. research_paper_chatbot - AI research paper chatbot
-6. Diagnosing-Alzheimer-s-Disease - DL-based AD diagnosis
-7. ChE_prediction - Cholinesterase inhibitor prediction
-
-═══════════════════════════════════════════════════════
-Generated from: https://pip700.github.io/CV/`;
-
-            const blob = new Blob([cvContent], { type: 'text/plain' });
-            const url = window.URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'Dhairiya_Agarwal_CV.txt';
-            document.body.appendChild(a);
-            a.click();
-            window.URL.revokeObjectURL(url);
-            document.body.removeChild(a);
-        }
     </script>
 </body>
 </html>
